# agile-wheel

./: .coverage  .env  .env.template  .gitignore  404.html  CNAME  Makefile  README.md  compose.yaml  docker-compose.yaml  index.html  mkdocs.yml  package-lock.json  package.json  poetry.sh  pyproject.toml  sitemap.xml  sonar-project.properties
.github/workflows/: deploy-backend.yml  deploy-docs.yml  deploy-frontend.yml  manual-workflow.yml  pull-request-check.yml
1-architecture/: index.html
1-architecture/data-model/: index.html
2-backend/: index.html
2-backend/configuration/: index.html
2-backend/domain-activity-http/: index.html
2-backend/domain-activity-ws/: index.html
3-frontend/: index.html
3-frontend/component-activity/: index.html
3-frontend/component-activity-creation-entry/: index.html
3-frontend/component-activity-creation-join/: index.html
3-frontend/component-result/: index.html
3-frontend/frontend-services-data-flow/: index.html
3-frontend/ui-styling-theming/: index.html
4-development-deployment/: index.html
4-development-deployment/continuous-integration/: index.html
4-development-deployment/docker-setup/: index.html
automations/: index.html
backend/: .env.template  .env.test  Dockerfile  entrypoint.sh  pyproject.toml  sonar-project.properties
backend/src/: main.py
backend/src/adapters/http/: close_activity.py  create_activity.py  evaluation_activity.py  get_result_activity.py  get_status_activity.py  join_activity.py  patch_join_activity.py  post_close_activity.py  post_create_activity.py  post_evaluation_activity.py  result_activity.py  router_http.py  schemas.py  status_activity.py
backend/src/adapters/http/middleware/: api_token_middleware.py
backend/src/adapters/input/: create_activity.py  evaluation_activity.py  join_activity.py  router.py  schemas.py  status_activity.py
backend/src/adapters/input/http/: close_activity.py  create_activity.py  evaluation_activity.py  join_activity.py  result_activity.py  schemas.py  status_activity.py
backend/src/adapters/input/websocket/: activity_stream.py  schemas.py
backend/src/adapters/output/: activity_document.py  activity_document_mongo.py  activity_repository_firestore_adapter.py  activity_repository_mongo_adapter.py
backend/src/adapters/persistence/: activity_document.py  activity_repository_firestore_adapter.py  activity_repository_mongo_adapter.py
backend/src/adapters/websocket/: activity_stream.py  router_ws.py  schemas.py  ws_activity_stream.py
backend/src/application/dto/: activity_with_result.py
backend/src/application/ports/input/: close_activity_port.py  create_activity_port.py  evaluation_activity_port.py  get_activity_port.py  get_activity_result_port.py  get_activity_status_port.py  join_activity_port.py  status_activity_port.py
backend/src/application/usecase/: __init__.py  close_activity_service.py  close_activity_use_case.py  create_activity_service.py  create_activity_use_case.py  evaluation_activity_service.py  get_activity_result_use_case.py  get_activity_service.py  get_activity_status_use_case.py  get_activity_use_case.py  join_activity_use_case.py  status_activity_service.py
backend/src/config/: __init__.py  database.py  dependencies.py  logger.py  logging.py  monitoring.py  settings.py
backend/src/domain/aggregations/: activity_result.py
backend/src/domain/entities/: activity.py  dimension.py  evaluation.py
backend/src/domain/exceptions/: __init__.py  base.py  generic_database.py  invalid_user.py  not_found.py  permission_denied.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/adapters/: test_create_activity_route.py  test_join_activity_route.py  test_result_activity_route.py  test_status_activity_route.py
backend/tests/integration/adapters/input/: test_create_activity_route.py  test_join_activity_route.py
backend/tests/integration/http/: test_create_activity_route.py  test_join_activity_route.py  test_result_activity_route.py  test_status_activity_route.py
backend/tests/integration/websocket/: test_activity_stream_route.py
backend/tests/unit/: test_main.py
backend/tests/unit/adapters/http/: test_api_token_middleware.py
backend/tests/unit/adapters/output/: test_activity_document.py  test_activity_repository_adapter.py  test_activity_repository_firestore_adapter.py  test_activity_repository_mongo_adapter.py
backend/tests/unit/adapters/persistence/: test_activity_document.py  test_activity_repository_firestore_adapter.py  test_activity_repository_mongo_adapter.py
backend/tests/unit/application/: test_close_activity_service.py  test_close_activity_use_case.py  test_create_activity_service.py  test_create_activity_use_case.py  test_evaluation_activity_service.py  test_evaluation_activity_use_case.py  test_get_activity_result_use_case.py  test_get_activity_service.py  test_get_activity_status_use_case.py  test_get_activity_use_case.py  test_join_activity_service.py  test_join_activity_use_case.py  test_status_activity_service.py
backend/tests/unit/config/: settings.py  teset_monitoring.py  test_dependencies.py  test_init_database.py  test_init_logger.py  test_init_settings.py  test_monitoring.py
backend/tests/unit/domain/: test_activity_result.py
docs/: README.md  agile-wheel-framework.md  automations.md  index.md  local-run.md  others.md
docs/1-architecture/: README.md  backend-architecture.md  data-model.md  frontend-architecture.md  index.md
docs/2-backend/: index.md
docs/3-frontend/: activity-creation-entry.md  component-evaluation.md  frontend-services-data-flow.md  index.md
docs/4-development-deployment/: docker-setup.md  index.md
docs/_ai-generated/: agile-wheel-framework.md  index.md
frontend/: .env.template  .gitignore  .prettierrc  Dockerfile  angular.json  entrypoint.sh  eslint.config.js  karma.conf.js  nginx.conf.template  package-lock.json  package.json  sonar-project.properties  tailwind.config.js  tsconfig.json
local-run/: index.html
others/: index.html
search/: search_index.json
src/: __init__.py  main.py
tests/: conftest.py
(+184 files in other folders)
