[project]
name = "agile-wheel"
version = "0.1.0"
description = "Agile Wheel - real time agile assessment dynamics"
readme = "README.md"

authors = [
    {name = "Miguel Muller",email = "miguelsmuller@users.noreply.github.com"}
]

requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)", 
    "uvicorn[standard] (>=0.34.0,<0.35.0)", 
    "python-dotenv (>=1.1.0,<2.0.0)", 
    "pydantic (>=2.11.1,<3.0.0)", 
    "beanie (>=1.29.0,<2.0.0)", 
    "motor (>=3.7.0,<4.0.0)", 
    "pydantic-settings (>=2.8.1,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
poetry = "^2.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
